# gametoo

./: CMakeLists.txt  todo.txt
res/shader/: fragment.fs  vertex.vs
src/: Chunk.cpp  Chunk.hpp  GameManager.cpp  GameManager.hpp  GameState.cpp  GameState.hpp  Unit.cpp  Unit.hpp  World.cpp  World.hpp  main.cpp
src/event/: CreateUnitEvent.hpp  UpdateStateEvent.hpp
src/net/: ConnectionManager.cpp  ConnectionManager.hpp  Packet.hpp
src/net/client/: ServerConnection.cpp  ServerConnection.hpp
src/net/server/: ConnectedPlayer.cpp  ConnectedPlayer.hpp  GameServer.cpp  GameServer.hpp  SyncManager.cpp  SyncManager.hpp
src/render/: FontRenderer.cpp  FontRenderer.hpp  Render.cpp  Render.hpp  RenderObject.cpp  RenderObject.hpp  ResourceManager.cpp  ResourceManager.hpp
src/render/scene/: CreateMPGameScene.cpp  CreateMPGameScene.hpp  CreateSPGameScene.cpp  CreateSPGameScene.hpp  GameScene.cpp  GameScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  Scene.hpp  SplashScene.cpp  SplashScene.hpp
